# UBB-BACHELOR-DEGREE

./: README.md
FP/Antrenamet_TestFP_Part2/CoffeShop/: ui.py
FP/antrenament_test2_tennis/src/: main.py
SEM. 1/: Fără titlu.txt.rtf
SEM. 2/OOP/ANTRENAMENT_TEST1/: CMakeLists.txt  main.cpp
SEM. 2/OOP/ANTRENAMENT_TEST1/Domain/: School.cpp  School.h
SEM. 2/OOP/ANTRENAMENT_TEST1/Repo/: Repository.cpp  Repository.h
SEM. 2/OOP/ANTRENAMENT_TEST1/Service/: Service.cpp  Service.h
SEM. 2/OOP/ANTRENAMENT_TEST1/Tests/: Test.cpp  Test.h
SEM. 2/OOP/ANTRENAMENT_TEST1/UI/: ui.cpp  ui.h
SEM. 2/OOP/ANTRENAMENT_TEST2_VAR_EXEMPLU/: CMakeLists.txt  main.cpp  repo.txt
SEM. 2/OOP/ANTRENAMENT_TEST_4_BILLS/: CMakeLists.txt  main.cpp
SEM. 2/OOP/ANTRENAMENT_TEST_4_BILLS/Domain/: Bill.cpp  Bill.h
SEM. 2/OOP/ANTRENAMENT_TEST_4_BILLS/Repository/: Repo.cpp  Repo.h
SEM. 2/OOP/ANTRENAMENT_TEST_4_BILLS/Service/: Service.cpp  Service.h
SEM. 2/OOP/ANTRENAMENT_TEST_4_BILLS/UI/: Ui.cpp  Ui.h
SEM. 2/OOP/EXAMEN_SCRIS_CODE_REVISION/: CMakeLists.txt  main.cpp  members.txt  sourcefiles.txt
SEM. 2/OOP/EXAMEN_SCRIS_CODE_REVISION/Domain/: domain.cpp  domain.h
SEM. 2/OOP/EXAMEN_SCRIS_CODE_REVISION/Service/: service.cpp  service.h
SEM. 2/OOP/EXAMEN_SCRIS_CODE_REVISION/UI/: ui.cpp  ui.h
SEM. 2/OOP/EXAMEN_SCRIS_EVENT_PLANNER/: CMakeLists.txt  main.cpp
SEM. 2/OOP/TES2_ANTRENAMENT_GITHUB_SUBJECT/: CMakeLists.txt  main.cpp  repo.txt
SEM. 2/OOP/TEST2_ANTRENAMENT_OLD_BUILDINGS/: CMakeLists.txt  main.cpp
SEM. 2/OOP/TEST2_ANTRENAMENT_OLD_BUILDINGS/Controller/: Controller.cpp  Controller.h
SEM. 2/OOP/TEST2_ANTRENAMENT_OLD_BUILDINGS/Domain/: Domain.cpp  Domain.h
SEM. 2/OOP/TEST2_ANTRENAMENT_OLD_BUILDINGS/UI/: ui.cpp  ui.h
SEM. 2/OS/prep_examen/: 1.sh  2.c  3.c  5.sh  6.c  a.txt  b.txt  c.txt  d.txt  ex1.txt  exe  exe2  exe6  (+2 more)
asc-main/: ASSEMBLY THEORY.docx
(+201 files in other folders)
